--- a/styles/overlays.less
+++ b/styles/overlays.less
@@ -4,7 +4,7 @@ atom-panel.modal, .overlay {
   color: @text-color;
   padding: 0;
 
-  background-color: red;
+  background-color: @app-background-color;
   border: none;
   box-shadow: 0 0 100px fade(#000, 50%), 0 0 0 1000px fade(#000, 10%);
 
